no %static commit

--- a/main/templates/adding.html
+++ b/main/templates/adding.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static '/css/adding.css' %}">
-    <script defer src="{% static '/js/POST.js' %}"></script>
+    <link rel="stylesheet" href="../static/css/adding.css">
+    <script defer src="../static/js/POST.js"></script>
 </head>
 <body>
     <div class="content">
