--- a/main/templates/stats.html
+++ b/main/templates/stats.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Miniliga Kraków</title>
     <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27' rel='stylesheet'>
 
-    <link rel="icon" href="{% static 'img/logo.png' %}">
-    <link rel="stylesheet" href="{% static '/css/miniliga.css' %}">
-    <script type="module" src="{% static '/js/miniliga.js' %}"></script>
+    <link rel="icon" href="../static/img/logo.png">
+    <link rel="stylesheet" href="../static/css/miniliga.css">
+    <script type="module" src="../static/js/miniliga.js"></script>
 </head>
 <body>
 <div class="container">
     <header class="header subpage">
         <nav class="nav">
             <div class="header-logo-container">
-                <img class="header-logo-img" src="{% static 'img/logo.png' %}">
+                <img class="header-logo-img" src="../static/img/logo.png">
                 <div class="header-logo-text">MINILIGA</div>
             </div>
             <ul class="nav-links">
@@ -36,20 +35,20 @@
         <div class="header-glass-panel">
             <div class="glass-panel-nav">
                 <div class="glass-panel-filter">
-                    <img class="glass-panel-filter__icon" src="{% static 'img/filter-icon.svg' %}">
+                    <img class="glass-panel-filter__icon" src="../static/img/filter-icon.svg">
                 </div>
                 <div class="filter-bar">
-                    <img src="{% static 'img/1.png' %}" class="filter filter-active" id="f1">
-                    <img src="{% static 'img/2.png' %}" class="filter" id="f2">
-                    <img src="{% static 'img/3.png' %}" class="filter" id="f3">
-                    <img src="{% static 'img/4.png' %}" class="filter" id="f4">
+                    <img src="../static/img/1.png" class="filter filter-active" id="f1">
+                    <img src="../static/img/2.png" class="filter" id="f2">
+                    <img src="../static/img/3.png" class="filter" id="f3">
+                    <img src="../static/img/4.png" class="filter" id="f4">
                 </div>
                 <nav class="stats-nav">
                     <ul>
-                        <li><img src="{% static 'img/star-white.svg' %}"><span class="clear yellow-text" data-id="1">MVP</span></li>
-                        <li><img src="{% static 'img/football-icon.svg' %}"><span class="clear" data-id="2">STRZELCY</span></li>
-                        <li><img src="{% static 'img/keeper-gloves.svg' %}"><span class="clear" data-id="3">BRAMKARZE</span></li>
-                        <li><img src="{% static 'img/team-icon.svg' %}"><span class="clear" data-id="4">DRUŻYNY</span></li>
+                        <li><img src="../static/img/star-white.svg"><span class="clear yellow-text" data-id="1">MVP</span></li>
+                        <li><img src="../static/img/football-icon.svg"><span class="clear" data-id="2">STRZELCY</span></li>
+                        <li><img src="../static/img/keeper-gloves.svg"><span class="clear" data-id="3">BRAMKARZE</span></li>
+                        <li><img src="../static/img/team-icon.svg"><span class="clear" data-id="4">DRUŻYNY</span></li>
                     </ul>
                 </nav>
             </div>
@@ -73,20 +72,20 @@
     </header>
     <footer class="footer" id="kontakt">
         <div class="footer-copyright-container">
-            <div class="footer-copyright__icon"><img src="{% static '/img/copyright-icon.svg' %}" alt="Ikona copyright"></div>
+            <div class="footer-copyright__icon"><img src="../static/img/copyright-icon.svg" alt="Ikona copyright"></div>
             <div class="footer-copyright__text">2023 Maciej Budzich | Krzysztof Maron | wszelkie prawa zastrzeżone</div>
         </div>
         <div class="footer-socials-container">
             <div class="footer-socials-facebook-container">
-                <div class="footer-socials-facebook__icon"><img src="{% static '/img/facebook-icon.svg' %}" alt="Ikona facebook"></div>
+                <div class="footer-socials-facebook__icon"><img src="../static/img/facebook-icon.svg" alt="Ikona facebook"></div>
                 <div class="footer-socials-facebook__text">Facebook</div>
             </div>
             <div class="footer-socials-mail-container">
-                <div class="footer-socials-mail__icon"><img src="{% static '/img/mail-icon.svg' %}" alt="Ikona mail"></div>
+                <div class="footer-socials-mail__icon"><img src="../static/img/mail-icon.svg" alt="Ikona mail"></div>
                 <div class="footer-socials-mail__text">miniliga@gmail.com</div>
             </div>
         </div>
-        <img class="footer-logo" src="{% static '/img/logo.png' %}" alt="logo miniligi">
+        <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
     </footer>
 </div>
 </body>
