--- a/main/templates/teamOverview.html
+++ b/main/templates/teamOverview.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{{team.name}}</title>
     <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27' rel='stylesheet'>
 
-    <link rel="icon" href="{% static '/img/logo.png' %}">
-    <link rel="stylesheet" href="{% static '/css/teamOverview.css' %}">
-    <script type="module" src="{% static '/js/teamOverview.js' %}"></script>
+    <link rel="icon" href="../static/img/logo.png">
+    <link rel="stylesheet" href="../static/css/teamOverview.css">
+    <script type="module" src="../static/js/teamOverview.js"></script>
 </head>
 <body>
     <div class="container">
         <header class="header subpage media-wrap">
             <nav class="nav nav-media-wrap">
                 <div class="header-logo-container">
-                    <img class="header-logo-img" src="{% static '/img/logo.png' %}">
+                    <img class="header-logo-img" src="../static/img/logo.png">
                     <div class="header-logo-text">MINILIGA</div>
                 </div>
                 <ul class="nav-links">
@@ -103,20 +102,20 @@
         </header>
         <footer class="footer" id="kontakt">
             <div class="footer-copyright-container">
-                <div class="footer-copyright__icon"><img src="{% static '/img/copyright-icon.svg' %}" alt="Ikona copyright"></div>
+                <div class="footer-copyright__icon"><img src="../static/img/copyright-icon.svg" alt="Ikona copyright"></div>
                 <div class="footer-copyright__text">2023 Maciej Budzich | Krzysztof Maron | wszelkie prawa zastrzeżone</div>
             </div>
             <div class="footer-socials-container">
                 <div class="footer-socials-facebook-container">
-                    <div class="footer-socials-facebook__icon"><img src="{% static '/img/facebook-icon.svg' %}" alt="Ikona facebook"></div>
+                    <div class="footer-socials-facebook__icon"><img src="../static/img/facebook-icon.svg" alt="Ikona facebook"></div>
                     <div class="footer-socials-facebook__text">Facebook</div>
                 </div>
                 <div class="footer-socials-mail-container">
-                    <div class="footer-socials-mail__icon"><img src="{% static '/img/mail-icon.svg' %}" alt="Ikona mail"></div>
+                    <div class="footer-socials-mail__icon"><img src="../static/img/mail-icon.svg" alt="Ikona mail"></div>
                     <div class="footer-socials-mail__text">miniliga@gmail.com</div>
                 </div>
             </div>
-            <img class="footer-logo" src="{% static '/img/logo.png' %}" alt="logo miniligi">
+            <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
         </footer>
     </div>
 </body>
