--- a/main/templates/teams.html
+++ b/main/templates/teams.html
@@ -67,7 +67,7 @@
         <div class="footer-socials-container">
             <div class="footer-socials-facebook-container">
                 <div class="footer-socials-facebook__icon"><img src="../static/img/facebook-icon.svg" alt="Ikona facebook"></div>
-                <div class="footer-socials-facebook__text">Facebook</div>
+                <div class="footer-socials-facebook__text">Miniliga</div>
             </div>
             <div class="footer-socials-mail-container">
                 <div class="footer-socials-mail__icon"><img src="../static/img/mail-icon.svg" alt="Ikona mail"></div>
