--- a/main/templates/stats.html
+++ b/main/templates/stats.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="../static/img/logo.png">
     <link rel="stylesheet" href="../static/css/miniliga.css">
-    <script type="module" src="../static/js/miniliga.js"></script>
+    <script type="module" src="../static/js/stats.js"></script>
 </head>
 <body>
 <div class="container">
@@ -78,7 +78,7 @@
         <div class="footer-socials-container">
             <div class="footer-socials-facebook-container">
                 <div class="footer-socials-facebook__icon"><img src="../static/img/facebook-icon.svg" alt="Ikona facebook"></div>
-                <div class="footer-socials-facebook__text">Facebook</div>
+                <div class="footer-socials-facebook__text">Miniliga</div>
             </div>
             <div class="footer-socials-mail-container">
                 <div class="footer-socials-mail__icon"><img src="../static/img/mail-icon.svg" alt="Ikona mail"></div>
