--- a/main/templates/adding.html
+++ b/main/templates/adding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Miniliga | add match</title>
     <link rel="stylesheet" href="../static/css/adding.css">
     <script defer src="../static/js/POST.js"></script>
 </head>
