--- a/main/templates/approve.html
+++ b/main/templates/approve.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Miniliga | approve</title>
     <link rel="stylesheet" href="../static/css/approve.css">
     <script defer src="../static/js/approve.js"></script>
 </head>
