--- a/main/templates/matches.html
+++ b/main/templates/matches.html
@@ -69,7 +69,7 @@
                 </div>
 <!--                    ////////////////////////////////////////////////////-->
                 {% for match in matches %}
-                    {% if match.accepted == true %}
+                    {% if match.accepted == True %}
                         <div class="values-container">
                             <div class="teamname-container team--A">
                                 <a href="teams/{{match.team1.id}}">{{match.team1}}</a>
