--- a/main/static/css/miniliga.css
+++ b/main/static/css/miniliga.css
@@ -126,6 +126,13 @@
     font-size: 90%;
   }
 }
+@media screen and (width <= 1200px) {
+  .footer-copyright-container {
+    width: 30%;
+    font-size: 90%;
+  }
+}
+
 
 .footer-socials-container {
   flex-direction: row;
@@ -317,7 +324,7 @@
   font-size: 150%;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .glass-panel-nav .glass-panel-searchbar .glass-panel-searchbar__input {
     max-width: auto;
     min-width: 65%;
@@ -364,7 +371,7 @@
   align-items: center;
   gap: 1%;
   width: 100%;
-  height: 90%;
+  height: 80%;
   display: flex;
   position: absolute;
   bottom: 0vh;
@@ -392,7 +399,7 @@
   overflow: hidden;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .glass-panel-content .values-container {
     min-height: 4vh;
     font-size: 120%;
@@ -407,6 +414,26 @@
   height: 60%;
   position: absolute;
   left: 5%;
+}
+@media screen and (max-width: 1200px) {
+  .value-team-league__icon{
+    height: 40% !important;
+  }
+  .value-team-name{
+    font-size: 150%;
+  }
+  .teamname-container .img{
+    height: 40% !important;
+  }
+  .values-container .values__score{
+    font-size: 150% !important;
+  }
+  .values-container .values__date{
+    font-size: 150% !important;
+  }
+  .values-container a{
+    font-size: 150% !important;
+  }
 }
 
 .glass-panel-content .values-container .values__score {
@@ -526,7 +553,7 @@
   }
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .long-name {
     font-size: 60%;
   }
@@ -604,7 +631,7 @@
   bottom: 0;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .statistics-panel .team-details-container .team-details__statistics .team-details__statistics--container {
     width: 95%;
   }
@@ -622,7 +649,7 @@
   position: relative;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .statistics-panel .team-details-container .team-details__statistics .team-details__statistics--container .shade-box {
     font-size: 200%;
     width: 100% !important;
@@ -753,7 +780,7 @@
   position: relative;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .statistics-panel .player-list-container .player-list-window .player-list__list .player-list__person-box {
     min-height: 5%;
   }
@@ -767,7 +794,7 @@
   left: 0;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .statistics-panel .player-list-container .player-list-window .player-list__list .player-list__person-box .player-box__role {
     height: 40%;
   }
@@ -830,7 +857,7 @@
   margin-right: 5vh;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .shown {
     z-index: 2;
     position: absolute;
@@ -856,7 +883,7 @@
   min-width: unset !important;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .short-input {
     font-size: 80% !important;
   }
@@ -894,7 +921,7 @@
   display: flex;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .stats-nav ul li {
     gap: unset;
     flex-direction: column-reverse;
@@ -913,9 +940,12 @@
   font-weight: 600;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .stats-nav ul li span {
     font-size: 80%;
+  }
+  .stats-nav ul li img {
+    height: 20%;
   }
 }
 
@@ -936,7 +966,7 @@
   display: flex;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .small-text {
     font-size: 60% !important;
   }
@@ -949,7 +979,7 @@
   top: 10vh;
 }
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .values-headline {
     height: 1.5vh;
   }
@@ -989,7 +1019,7 @@
 }
 
 
-@media screen and (width <= 1300px) {
+@media screen and (width <= 1200px) {
   .headline-container__value img{
     height: 150%;
     width: 150%;
@@ -1048,6 +1078,15 @@
 .stats-value-container span {
   text-align: center;
   width: 50%;
+}
+
+@media screen and (max-width: 1200px){
+  .stats-value__teamname{
+    font-size: 150%;
+  }
+  .stats-value-container span{
+    font-size: 150%;
+  }
 }
 
 .displayed {
@@ -1118,7 +1157,8 @@
 @media screen and (max-width: 1000px){
   .filter-bar{
     top: 5vh;
-    height: 400%;
+    height: 20vh;
+    width: 5vw !important;
     animation: unfolding1000px 0.2s linear;
   }.headline-container__value img{
     top:-4vh;
@@ -1127,7 +1167,7 @@
   }
 }
 
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1200px){
   .sortbutton{
     height: auto !important;
     top: 1vh;
@@ -1145,5 +1185,9 @@
   }
   .arrow{
     scale: 55%;
+  }
+  .filter-bar{
+    width: 8vw !important;
+    height: 25vh;
   }
 }
