--- a/main/templates/adding.html
+++ b/main/templates/adding.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Miniliga | add match</title>
     <link rel="stylesheet" href="../static/css/adding.css">
-    <script defer src="../static/js/POST.js"></script>
+    <script defer src="../static/js/adding.js"></script>
 </head>
 <body>
     <div class="content">
