--- a/main/templates/stats.html
+++ b/main/templates/stats.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27' rel='stylesheet'>
 
     <link rel="icon" href="../static/img/logo.png">
-    <link rel="stylesheet" href="../static/css/miniliga.css">
+    <link rel="stylesheet" href="../static/css/stats.css">
     <script type="module" src="../static/js/stats.js"></script>
 </head>
 <body>
