--- a/main/templates/adding.html
+++ b/main/templates/adding.html
@@ -36,7 +36,7 @@
                     <div class="players-list"></div>
                 </div>
                 <div class="middle">
-                    <input type="date" class="calendar" id="match-date"></input>
+                    <input type="date" class="calendar" id="m-date"></input>
                     <input type='button' class="send-btn" value="Prześlij"></input>
                     <a class="db-btn" href="../admin" target="_blank">Baza</a>
                 </div>
