--- a/main/templates/teamOverview.html
+++ b/main/templates/teamOverview.html
@@ -58,7 +58,7 @@
                                     {% if goalsdiff >= 0 %}
                                         <div class="scores-up sub">(+{{goalsdiff}})</div>
                                     {% elif goalsdiff < 0 %}
-                                        <div class="scores-down sub">(-{{goalsdiff}})</div>
+                                        <div class="scores-down sub">({{goalsdiff}})</div>
                                     {% endif %}
                                 </div>
                             </div>
